code-essence startup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
         <title>
-                gobadei2.linuxpl.eu
+                code-essence.pl
         </title>
 
         <style>
@@ -16,7 +16,7 @@
 <center>
 <br><br><br><br>
         <table>
-        <tr><td>SIEMA Witamy na stronie <b>gobadei2.linuxpl.eu</b></td></tr>
+        <tr><td>Witamy na stronie <b>code-essence.pl</b></td></tr>
         <tr><td>Aby zmieniæ tê stronê proszê wgraæ pliki do katalogu public_html</td></tr>
         <tr><td><img src="logo.jpg"></td></tr>
         <tr><td style="font-size: 8pt">Serwery wirtualne <b><a href="http://linuxpl.com/"><b>Linuxpl.com </a></b></td></tr>
