--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <center>
 <br><br><br><br>
         <table>
+        <tr><td> GITHUB TEST </td></tr>
         <tr><td>Witamy na stronie <b>code-essence.pl</b></td></tr>
         <tr><td>Aby zmieniæ tê stronê proszê wgraæ pliki do katalogu public_html</td></tr>
         <tr><td><img src="logo.jpg"></td></tr>
